--- a/style.css
+++ b/style.css
@@ -168,7 +168,7 @@ nav {
   width: 100%;
 }
 
-.burger {
+/* .burger {
   display: none;
   cursor: pointer;
 }
@@ -179,6 +179,15 @@ nav {
   background-color: var(--dark);
   margin: 5px;
   transition: var(--transition);
+} */
+.burger {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
+.brandlogo {
+  width: 50px;
+  height: 50px;
 }
 
 /* Hero Section */
@@ -194,7 +203,11 @@ nav {
   position: relative;
   overflow: hidden;
 }
-
+.hero .container {
+  display: flex;
+  justify-content: space-between;
+  flex-direction: row;
+}
 .hero-content {
   width: 50%;
   animation: fadeInLeft 1s ease;
@@ -210,14 +223,9 @@ nav {
   position: absolute;
   right: 0;
   animation: float 3s ease-in-out infinite;
-  opacity: 0;
-  transform: translateY(50px);
-  transition: opacity 0.8s ease, transform 0.8s ease;
-}
-
-.visible {
   opacity: 1;
-  transform: translateY(0);
+  /* transform: translateY(50px);
+  transition: opacity 0.8s ease, transform 0.8s ease; */
 }
 
 @keyframes float {
@@ -336,10 +344,8 @@ nav {
 .features-img img {
   max-width: 100%;
   border-radius: 10px;
-  box-shadow: 0 20px 40px rgba(0, 0, 0, 0.1);
-  opacity: 0;
-  transform: translateX(50px);
-  transition: opacity 0.8s ease, transform 0.8s ease;
+  /* box-shadow: 0 20px 40px rgba(0, 0, 0, 0.1); */
+  opacity: 1;
 }
 
 .feature-list {
@@ -731,15 +737,21 @@ footer {
   h2 {
     font-size: 2rem;
   }
-
+  .hero .container {
+    display: flex;
+    justify-content: space-between;
+    flex-direction: column;
+    /* align-items: center; */
+  }
   .hero-content,
   .hero-img {
     width: 100%;
+    padding-top: 75px;
   }
 
   .hero-img {
     margin-top: 2rem;
-    text-align: center;
+    /* text-align: center; */
   }
 
   .software-image {
